--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -15,6 +15,7 @@
 @import 'footer';
 @import 'header';
 @import 'home';
+@import 'my_chat';
 @import 'my_messages';
 @import 'parcel_overview';
 @import 'popups';
