--- a/src/styles/parcel_overview.scss
+++ b/src/styles/parcel_overview.scss
@@ -21,6 +21,19 @@
   }
 
 
+  &__btns {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+    > button {
+      margin: 0 0 60px;
+
+      &:last-child {
+        margin: 0;
+      }
+    }
+  }
 
   &__description {
     font-size: 20px;
