13,6,7,14 | pages code refactor + footer

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -16,6 +16,7 @@
 @import 'footer';
 @import 'header';
 @import 'home';
+@import 'my_chat';
 @import 'my_messages';
 @import 'parcel_overview';
 @import 'popups';
