--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -217,7 +217,7 @@
 .popup_login {}
 
 .popup_login_options {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   font-size: 15px;
   justify-content: space-between;
