--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -12,10 +12,10 @@
 @import 'account';
 @import 'auto_search';
 @import 'breadcrumbs';
+@import 'chat';
 @import 'footer';
 @import 'header';
 @import 'home';
-@import 'my_chat';
 @import 'my_messages';
 @import 'parcel_overview';
 @import 'popups';
