--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -4,7 +4,7 @@
 .popup {
   background-color: #fff;
   border-radius: 14px;
-  padding: 70px;
+  padding: 58px 70px;
   position: relative;
   z-index: 99;
 
@@ -49,7 +49,16 @@
   }
 
   p {
-    padding: 0 0 20px;
+    font-size: 15px;
+  }
+
+  @media #{$mobile} {
+    font-size: 9px;
+    margin: 30px 0 0;
+
+    p {
+      font-size: 9px;
+    }
   }
 }
 
@@ -127,6 +136,11 @@
   font-style: italic;
   letter-spacing: 0.004em;
   line-height: 1.2;
+
+  @media #{$mobile} {
+    font-size: 10px;
+    line-height: 0.5;
+  }
 }
 
 
@@ -206,13 +220,18 @@
 .popup_login {}
 
 .popup_login_options {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
+  font-size: 15px;
   justify-content: space-between;
   margin: 0 0 20px;
   width: 100%;
-}
 
+  @media #{$mobile} {
+    font-size: 9px;
+    margin: 0 0 12px;
+  }
+}
 
 
 .popup_one_column {
@@ -227,8 +246,21 @@
     display: flex;
     flex-direction: column;
   }
+
+  @media #{$tablet_s} {
+    max-width: 480px;
+  }
+
+  @media #{$mobile} {
+    margin: 0 18px 0;
+    max-width: 284px;
+    padding: 30px 18px;
+  }
 }
 
+.popup_one_column__wrap {
+  width: 100%;
+}
 
 
 .popup_overlay {
@@ -254,6 +286,11 @@
   font-weight: 600;
   margin: 0 0 12px;
   width: 100%;
+
+  @media #{$mobile} {
+    font-size: 12px;
+    margin: 0 0 7px;
+  }
 }
 
 
@@ -283,9 +320,21 @@
   padding: 88px 104px;
   width: 100%;
 
+  @media #{$desktop} {
+    padding: 88px 58px;
+  }
+
   @media #{$tablet_l} {
-    padding: 60px;
+    padding: 60px 68px;
     max-width: 557px;
+  }
+
+  @media #{$tablet_m} {
+    padding: 60px 30px;
+  }
+
+  @media #{$mobile} {
+    padding: 30px;
   }
 }
 
@@ -306,16 +355,28 @@
   justify-content: space-between;
   margin: 0 0 40px;
 
-  >div {
+  > div {
     width: 47.5%;
   }
 
   @media #{$tablet_l} {
-    >div {
+    margin: 0 0 28px;
+
+    > div {
       width: 100%;
 
       &:first-child {
-        margin: 0 0 10px;
+        margin: 0 0 26px;
+      }
+    }
+  }
+
+  @media #{$mobile} {
+    margin: 0 0 13px;
+
+    > div {
+      &:first-child {
+        margin: 0 0 13px;
       }
     }
   }
@@ -344,15 +405,18 @@
   justify-content: space-between;
   margin: 0 0 40px;
 
-  >div {
+  > div {
     width: 23%;
   }
 
   @media #{$tablet_l} {
-    >div {
-      width: 100%;
+    > div {
+      width: 48.5%;
     }
   }
-}
 
+  @media #{$mobile} {
+    margin: 0 0 8px 0;
+  }
+}
 
